--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,10 @@
             <scope>test</scope>
             <version>${junit-jupiter.version}</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-quartz</artifactId>
+        </dependency>
 
     </dependencies>
 
